<resources>
    <string name="app_name" translatable="false">Emoji Battery - Battery Icon</string>
    <string name="english" translatable="false">English</string>
    <string name="Send_Email">Send Email</string>
    <string name="There_is_no">There is no</string>
    <string name="feedback_failed">Feedback failed</string>
    <string name="app_review_failed">App review failed</string>
    <string name="thank_you">Thank you</string>
    <string name="rate_us">Rate us</string>
    <string name="not_now">Not now</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="your_opinion_matter_to_us">Your opinion matter to us</string>
    <string name="if_you_enjoy_this_know_your_device_would_you_mind_rating_us_on_the_google_play_then">If you enjoy this Emoji Battery - Battery Icon, would you mind rating us on the Google Play, then?</string>
    <string name="language">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="are_you_sure_want_to_quit_app">Are you sure want to quit app?</string>
    <string name="please_choose_a_language">Please choose a language</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="title_intro_01">Creative Status Bar</string>
    <string name="title_intro_02">Template</string>
    <string name="title_intro_03">Customize Your Status Bar</string>
    <string name="title_intro_04">Notch</string>
    <string name="content_intro_01">Swap out your usual battery symbol with amazing emoji icons on your status bar.</string>
    <string name="content_intro_02">Explore a variety of templates for customization</string>
    <string name="content_intro_03">Replace default battery icons with a beautifully personalized status bar.</string>
    <string name="content_intro_04">Configure and show your custom notch design.</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="version">Version: </string>
    <string name="loading">Loading %1$d%%</string>
    <string name="please_select_a_language_to_continue">Please select language to continue</string>
    <string name="permission">Permission</string>
    <string name="to_show_your_custom_status_bar_and_gestures_permission_is_required">To show your custom status bar and gestures, permission is required.</string>
    <string name="accessibility">Accessibility</string>
    <string name="accessibility_service_usage">Accessibility Service Usage</string>
    <string name="content_accessibility_1">This app requires Accessibility Service permissions for the following purposes:</string>
    <string name="content_accessibility_2">To display the “Emoji Battery - Battery Icon” overlay on your screen and detect gestures on the status bar.</string>
    <string name="content_accessibility_3">To perform accessibility actions such as navigating to the Home screen, going back, and viewing recent apps.</string>
    <string name="content_accessibility_4">The app guarantees that it does not collect or share any personal user data related to this accessibility access.</string>
    <string name="accept_terms_of_service">Accept terms of service</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="You_have_not_accepted_the_terms_of_service">You have not accepted the terms of service</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="how_to_use">How to use</string>
    <string name="previous">Previous</string>
    <string name="_1_select_installed_apps_or_downloaded_app_in_accessibility_setting">1. Select “Installed Apps” or “Downloaded App” in Accessibility Setting</string>
    <string name="_2_select_emoji_battery_battery_icon">2. Select “Emoji Battery -Battery Icon”</string>
    <string name="_3_turn_on">3. Turn on</string>
    <string name="why_does_the_application_need_accessibility_service">Why does the Application need Accessibility Service?</string>
    <string name="this_app_need_to_be_activated_in_accessibility_service_to_show_custom_status_bar_view_on_top_of_phone_screen_amp_start_several_accessibility_actions_action_to_home_back_show_recent_screen_this_application_do_not_collect_or_share_any_user_data"><![CDATA[This app need to be activated in Accessibility Service to show custom status bar view on top of phone screen & start several Accessibility actions: Action to Home, Back, show Recent Screen. This application do not collect or share any user data.]]></string>
    <string name="supported_gestures_in_the_app">Supported gestures in the app</string>
    <string name="take_screenshot_quick_scroll_to_top_open_control_center_open_notification_back_home_recent_action_power_options_lock_screen">Take screenshot, Quick scroll to top, Open Control center, Open Notification, Back home, Recent action, Power options, Lock screen.</string>
    <string name="start">Start</string>
    <string name="enable_emoji_battery_to_begin">Enable Emoji Battery to begin</string>
    <string name="emoji_battery">Emoji battery</string>
    <string name="customize">Customize</string>
    <string name="status_bar">Status bar</string>
    <string name="gesture">Gesture</string>
    <string name="use_gesture_in_the_status_bar_for_custom_actions">Use gesture in the status bar for custom actions</string>
    <string name="notch">Notch</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="accessibility_desc">Display <b>“Battery Emoji”</b> view on mobile screen and to detect gestures on the status bar.\nStart accessibility actions: action Home, Back, Show recent screen.</string>
    <string name="hide_notch">HIDE NOTCH</string>
    <string name="use_gestures_in_the_status_bar_for_custom_actions">Use gestures in the status bar for custom actions</string>
    <string name="vibrate_feedback">Vibrate feedback</string>
    <string name="vibrate_feedback_when_interacting_with_the_status_bar">Vibrate feedback when interacting with the status bar</string>
    <string name="single_tap_action">Single - tap action</string>
    <string name="swipe_left_to_right_action">Swipe left to right action</string>
    <string name="swipe_right_to_left_action">Swipe right to left action</string>
    <string name="long_press_action">Long press action</string>
    <string name="intensity_s">Intensity: %s</string>
    <string name="do_nothing">Do nothing</string>
    <string name="back_action">Back action</string>
    <string name="home_action">Home action</string>
    <string name="take_screenshot">Take screenshot</string>
    <string name="recent_action">Recent action</string>
    <string name="lock_screen">Lock screen</string>
    <string name="power_options">Power options</string>
    <string name="open_control_center">Open control center</string>
    <string name="open_notification">Open notification</string>
    <string name="quick_scroll_to_top">Quick scroll to top</string>
    <string name="the_custom_status_bar_will_not_appear_unless_permission_is_granted">The custom status bar will not appear unless permission is granted.</string>
    <string name="size">Size</string>
    <string name="height_s">Height: %s dp</string>
    <string name="left_margin_s">Left Margin: %s dp</string>
    <string name="right_margin_s">Right Margin: %s dp</string>
    <string name="appearance">Appearance</string>
    <string name="icons_color">Icons color</string>
    <string name="background">Background</string>
    <string name="color_template">Color Template</string>
    <string name="customize_icon">Customize Icon</string>
    <string name="Emoji_Battery">Emoji Battery</string>
    <string name="Wifi">Wifi</string>
    <string name="Data">Data</string>
    <string name="Signal">Signal</string>
    <string name="Airplane">Airplane</string>
    <string name="Hotspot">Hotspot</string>
    <string name="Ringer">Ringer</string>
    <string name="Date_Time">Date &amp; Time</string>
    <string name="Carrier_Name">Carrier Name</string>
    <string name="Animation">Animation</string>
    <string name="Charge">Charge</string>
    <string name="Emotion">Emotion</string>
    <string name="icon_color">Icon color</string>
    <string name="save">Save</string>
    <string name="wifi_s">Wifi: %s dp</string>
    <string name="signal_s">Signal: %s dp</string>
    <string name="airplane_s">Airplane: %s dp</string>
    <string name="hotspot_s">Hotspot: %s dp</string>
    <string name="ringer_s">Ringer: %s dp</string>
    <string name="time_s">Time: %s dp</string>
    <string name="date_s">Date: %s dp</string>
    <string name="animation_s">Animation: %s dp</string>
    <string name="percentage_s">Percentage: %s dp</string>
    <string name="emoji_battery_s">Emoji Battery: %s dp</string>
    <string name="data_style">Data Style</string>
    <string name="apply">Apply</string>
    <string name="carrier_name">Carrier name</string>
    <string name="carrier_name_success">Success! try locking your phone to see the changes</string>
    <string name="please_enter_something">Please enter something</string>
    <string name="show_am_pm">Show AM/PM</string>
    <string name="show_second_mm_ss">Show second (mm/ss)</string>
    <string name="show_date">Show date</string>
    <string name="date_settings">Date settings</string>
    <string name="time_settings">Time settings</string>
    <string name="enable_emoji_battery">Enable Emoji Battery</string>
    <string name="see_more"><u><![CDATA[See more >>]]></u></string>
    <string name="content_animation">\"Tip: Enabling animations in the status bar could slightly affect your device\'s performance.\"</string>
    <string name="create_new">Create New</string>
    <string name="animation_list">Animation List</string>
    <string name="percentage_color">Percentage color</string>
    <string name="battery">Battery</string>
    <string name="emoji">Emoji</string>
    <string name="percentage">Percentage</string>
    <string name="enable_emotion">Enable Emotion</string>
    <string name="emotion_list">Emotion list</string>
    <string name="emoji_battery_template">Emoji battery template</string>
    <string name="template">Template</string>
    <string name="whoop">Whoop!</string>
    <string name="no_internet_connection_was_found_check_your_connection_or_try_again">No internet connection was found. Check your connection or try again</string>
    <string name="try_again">Try again</string>
    <string name="let_s_start">Let’s start</string>
    <string name="welcome_back">Welcome back</string>
    <string name="express_your_style_with_emoji_battery">Express Your Style with Emoji Battery</string>
    <string name="date_template">Date template</string>
    <string name="mon">Mon</string>
    <string name="txt_template_date_01">Mon, May 20</string>
    <string name="txt_template_date_02"><font color="#E00000">Mon</font>, <font color="#464646">May</font></string>
    <string name="txt_template_date_03">Mon, May 20</string>
    <string name="txt_template_date_04">May <font color="#E00000">20</font></string>
    <string name="txt_template_date_05">Mon, May 20</string>
    <string name="txt_template_date_06">Mon, May 20</string>
    <string name="may">May</string>
    <string name="monday">Monday</string>
    <string name="loading_data">Loading …</string>
    <string name="edit">Edit</string>
    <string name="custom_emoji_battery_status_bar_appearance">Custom emoji battery status bar appearance</string>
    <string name="show_battery_percentage">Show battery percentage</string>
</resources>