<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_radius_16"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_18sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.example.basekotlin.util.MovableText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/inter_700"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/accessibility_service_usage"
                android:textColor="#073100"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:background="#DAD9DC" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:fontFamily="@font/inter_400"
            android:text="@string/content_accessibility_1"
            android:textColor="#262626"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:fontFamily="@font/inter_400"
                android:text="•"
                android:textColor="#262626"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_400"
                android:text="@string/content_accessibility_2"
                android:textColor="#262626"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:fontFamily="@font/inter_400"
                android:text="•"
                android:textColor="#262626"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_400"
                android:text="@string/content_accessibility_3"
                android:textColor="#262626"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:fontFamily="@font/inter_400"
            android:text="@string/content_accessibility_4"
            android:textColor="#262626"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_radio"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:src="@drawable/ic_radio_sn" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_400"
                android:includeFontPadding="false"
                android:text="@string/accept_terms_of_service"
                android:textColor="#020007"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_decline"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_100"
                android:fontFamily="@font/inter_700"
                android:gravity="center"
                android:text="@string/decline"
                android:textColor="#050014"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_accept"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_100"
                android:fontFamily="@font/inter_700"
                android:gravity="center"
                android:text="@string/accept"
                android:textColor="#5F5F5F"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>